src/BloomBrowserUI/bookLayout/basePage.less
/* ... */
/* gridItem means this is a page thumbnail */
.gridItem {
    .pageOverflows {
        height: 100%;
    }
    .pageOverflowsIcon {
        background-image: url("/bloom/Attention.svg"); /* red triangle with exclamation point */
        background-position: bottom;
        background-repeat: no-repeat;
        background-size: 70%;
        z-index: 3; // Should be above split-pane-component and split-pane-divider
        height: 100%;
    }
}
div.ui-tooltip-content {
    overflow: visible !important;
    font-size: 10pt;
    padding: 0px 9px;
}
.uibloomSourceTextsBubble .ui-tooltip-content {
    /*This minimum height is for picture dictionary where the height of the target box is just one line high, not enough to show the language tabs at the top and then the content below*/
    min-height: 60px !important;
}
.bloom-imageContainer {
    min-height: 50px;
    z-index: 100;
}
p {
    //without this, an empty paragraph will be invisible, making blank lines impossible
    //but we also want to make sure that an empty paragraph is the same height as other lines...
    //especially since in the Edit Page (but not in Publish to Reader preview, bloom-player, etc),
    //CKEditor will insert a <br> element (making it take up the line-height) whereas without the <br>,
    //it would take up the min-height
    min-height: @defaultLineHeight;
}
textarea,
.bloom-editable {
    resize: none;
    /*don't show those cute little resize controls in Firefox 4 and greater*/
    overflow: visible;
    // this is just... bogus! removing it will cause some problems, but.. but... font-size: 143%;
    line-height: @defaultLineHeight;
    min-height: @defaultLineHeight + 0.3em;
    width: 100%;
    // We want the bloom-editables to fill the containing bloom-translationGroup,
    // so that the boxes around them give an idea of how much space is available
    // when the translationGroup has a fixed size. This pair of properties allows
    // each bloom-editable to grow proportionally to fill the space (including
    // filling it all if there is only one).
    height: auto;
    flex-grow: 1;
    // visible .bloom-editables are made display:flex rather than display:none
    // to allow for possible vertical alignment options. Once using display:flex,
    // the direction must be column, or paragraphs arrange in a row.
    flex-direction: column;
}

/* The following has been split out from the above rule because it should probably be removed,
    but at this point we are about to go release candidate with 3.1 so it will have to wait.
    When we do remove it, the main things it could effect are the Story Primer template and the dozen or so SIL LEAD Uganda SHRP templates.
*/
td {
    resize: none;
    /*don't show those cute little resize controls in Firefox 4 and greater*/
    overflow: visible;
    font-size: 143%;
    line-height: @defaultLineHeight;
    min-height: @defaultLineHeight + 0.3em;
    width: 100%;
}

//user can get this in by pressing shift-enter. See bloomField.ts
span.bloom-linebreak {
    display: block;
    text-indent: 0;
}

div.bloom-page {
    display: block;

    background-color: @bloom-page-background;
}
div#bloomDataDiv {
    display: none;
}
.centered {
    text-align: center;
}
.centerJustify {
    text-align: center;
}

@bleed: 3mm;
@RA5Portrait-Width: @A5Portrait-Width + @bleed + @bleed;
@RA5Portrait-Height: @A5Portrait-Height + @bleed + @bleed;
@RA5-Scale: unit(@RA5Portrait-Width / @A5Portrait-Width);
@A5Portrait-HeightFB: @A5Portrait-Height * @RA5-Scale;
@A5Portrait-Height-Excess: @A5Portrait-HeightFB - @RA5Portrait-Height;

@RA3Portrait-Width: @A3Portrait-Width + @bleed + @bleed;
@RA3Portrait-Height: @A3Portrait-Height + @bleed + @bleed;
@RA3-Scale: unit(@RA3Portrait-Width / @A3Portrait-Width);
@A3Portrait-HeightFB: @A3Portrait-Height * @RA3-Scale;
@A3Portrait-Height-Excess: @A3Portrait-HeightFB - @RA3Portrait-Height;

@RUSComicPortrait-Width: @USComicPortrait-Width + @bleed + @bleed;
@RUSComicPortrait-Height: @USComicPortrait-Height + @bleed + @bleed;
@RUSComic-Scale: unit(@RUSComicPortrait-Width / @USComicPortrait-Width);
@USComicPortrait-HeightFB: @USComicPortrait-Height * @RUSComic-Scale;
@USComicPortrait-Height-Excess: @USComicPortrait-HeightFB -
    @RUSComicPortrait-Height;

.bloom-fullBleed {
    //background-color: green;
    .bloom-page {
        transform-origin: top left;
        transition: 0.5s ease-in-out;
        &.A5Portrait {
            // NB: transform order is rightmost first
            transform: translate(0, -@A5Portrait-Height-Excess / 2)
                scale(@RA5-Scale);
        }
        &.A5Landscape {
            // NB: transform order is rightmost first
            transform: translate(-@A5Portrait-Height-Excess / 2, 0)
                scale(@RA5-Scale);
        }
        &.A3Portrait {
            // NB: transform order is rightmost first
            transform: translate(0, -@A3Portrait-Height-Excess / 2)
                scale(@RA3-Scale);
        }
        &.USComicPortrait {
            // NB: transform order is rightmost first
            transform: translate(0, -@USComicPortrait-Height-Excess / 2)
                scale(@RUSComic-Scale);
        }
    }
}
/* ... */

